--- a/src/nemotron/recipes/nano3/eval/config/pretrain.yaml
+++ b/src/nemotron/recipes/nano3/eval/config/pretrain.yaml
@@ -17,9 +17,9 @@
 
 # nemo-run execution settings and artifact references
 run:
-  model: ModelArtifact-pretrain:latest
+  model: pretrain:latest
   env:
-    container: nvcr.io/nvidian/nemo:25.09.rc11.mamba-conv-fix
+    container: nvcr.io/nvidian/nemo:25.11-nano-v3.rc2
   # Coordination files for deploy/eval communication
   # Note: comms.base_dir is auto-generated per job if not set
   comms:
