--- a/src/nemotron/recipes/nano3/eval/config/tiny.yaml
+++ b/src/nemotron/recipes/nano3/eval/config/tiny.yaml
@@ -20,7 +20,7 @@
 run:
   model: ???  # Model artifact (e.g., sft:latest) or set via CLI --model_path
   env:
-    container: nvcr.io/nvidian/nemo:25.09.rc11.mamba-conv-fix
+    container: nvcr.io/nvidian/nemo:25.11-nano-v3.rc2
   # Coordination files for deploy/eval communication
   # Note: comms.base_dir is auto-generated per job if not set
   comms:
