--- a/src/nemotron/recipes/nano3/stage0_pretrain/config/data_prep/tiny.yaml
+++ b/src/nemotron/recipes/nano3/stage0_pretrain/config/data_prep/tiny.yaml
@@ -46,8 +46,11 @@ max_doc_tokens: null
 # Limit rows per dataset for quick tests - small sample for tiny
 sample: 1000
 
-# Ray actors for parallel processing (null = auto)
-num_actors: null
+# Console output mode: 'simple' for periodic text updates, 'rich' for animated progress
+console_mode: simple
+
+# Interval in seconds for simple mode status updates (default: 30)
+simple_log_interval_sec: 30
 
 # Force new run, ignoring cache
 force: false
