--- a/src/nemotron/recipes/nano3/stage1_sft/config/data_prep/default.yaml
+++ b/src/nemotron/recipes/nano3/stage1_sft/config/data_prep/default.yaml
@@ -14,17 +14,30 @@ run:
 # Path to data blend JSON file
 blend_path: ${oc.env:PWD}/src/nemotron/recipes/nano3/stage1_sft/config/data_prep/data_blend_raw.json
 
-# Output directory for packed .npy data (outputs to job directory for persistence)
+# Output directory for packed Parquet data
 output_dir: ${oc.env:PWD}/../output/stage1_sft
 
-# HuggingFace tokenizer model name
-tokenizer_model: nvidia/NVIDIA-Nemotron-3-Nano-30B-A3B-Base-BF16
+# Number of output shards for parallel loading
+num_shards: 128
+
+# Tokenizer configuration (nested)
+tokenizer:
+  model: nvidia/NVIDIA-Nemotron-3-Nano-30B-A3B-Base-BF16
 
 # Maximum tokens per packed sequence
 pack_size: 4096
 
-# Target size per shard (e.g., '256MB', '1GB')
-shard_size: 256MB
+# Packing algorithm: 'first_fit_decreasing', 'first_fit_shuffle', 'concatenative'
+algorithm: first_fit_shuffle
+
+# Packing seed (null = use sample_seed)
+seed: null
+
+# Parquet row group size (bins per group)
+parquet_row_group_size: 1000
+
+# Parquet compression codec: 'zstd', 'snappy', 'gzip', 'none'
+parquet_compression: zstd
 
 # Split ratios (must sum to 1.0)
 train_ratio: 0.98
@@ -52,8 +65,41 @@ max_doc_tokens: null
 # Limit rows per dataset for quick tests (null = no limit)
 sample: null
 
-# Ray actors for parallel processing (null = auto)
-num_actors: null
+# Random seed for sampling
+sample_seed: 42
 
 # Force new run, ignoring cache
 force: false
+
+# Config name for artifact naming
+config_name: default
+
+# =============================================================================
+# Stage Configs
+# =============================================================================
+
+# Planning stage config
+plan:
+  planner_cpus: 0.5
+
+# Download stage config
+download:
+  batch_size: 1
+  stage_cpus: 0.5
+  hf_xet_high_performance: true
+  hf_xet_concurrent_range_gets: 32
+  max_retries: 3
+  timeout_sec: 300
+
+# Tokenization stage config
+tokenization:
+  cpus_per_worker: 4
+
+# =============================================================================
+# Pipeline Config
+# =============================================================================
+
+# Pipeline observability settings
+observability:
+  pipeline_logging_interval_s: 30
+  wandb_log_pipeline_stats: true
