--- a/src/nemotron/recipes/nano3/stage2_rl/config/tiny.yaml
+++ b/src/nemotron/recipes/nano3/stage2_rl/config/tiny.yaml
@@ -7,6 +7,12 @@ run:
 # Initial checkpoint for finetuning (Megatron format from SFT)
 initial_checkpoint: ${art:model,path}
 
+# Convert Megatron checkpoint to HuggingFace format using Megatron-Bridge
+# When true: converts initial_checkpoint to HF format, uses it for both vLLM and training
+# When false (default): vLLM uses base HF model, training loads weights via fake step_0 checkpoint
+convert_initial_checkpoint_to_hf: false
+converted_checkpoint_dir: null  # Optional: specify output dir, defaults to <checkpoint>_hf
+
 # GRPO Algorithm Configuration for training Nano v3
 grpo:
   num_prompts_per_step: 128
